# vgd-jam-2026

./: .gitignore  README.md  justfile
assets/: level-config.ron
docs/: assets.md  index.md
docs/lists/: list01.md  list02.md
src/: Cargo.toml  flake.nix
src/game/: Cargo.toml
src/game/src/: main.rs  menu.rs  window.rs
src/level/: Cargo.toml
src/level/src/: animation.rs  lib.rs  path.rs  route.rs
src/level/src/buildings/: hero_config.rs  heroes.rs  mod.rs  spawner.rs  spawner_config.rs  spawners.rs  turret_config.rs  turrets.rs
src/level/src/character_select/: available_characters.rs  game_objectives.rs  mod.rs  roster_slots.rs  ui.rs
src/level/src/characters/: chicken.rs  mod.rs  utils.rs
src/level/src/level_map/: build_point.rs  hero_slots.rs  map_background.rs  map_config.rs  mod.rs  path.rs  spawner_point.rs  tower_point.rs  turret_point.rs
src/level/src/minions/: animation.rs  damage.rs  minion.rs  minion_config.rs  mod.rs  movement.rs
src/level/src/tiles/: buildable_tile.rs  building.rs  mod.rs  soil.rs  wheat.rs
src/level_selector/: Cargo.toml
src/level_selector/src/: level_config.rs  level_select_config.rs  lib.rs  ui.rs
src/main_menu/: Cargo.toml
src/main_menu/src/: buttons.rs  lib.rs  ui.rs
src/state/: Cargo.toml
src/state/src/: global_state.rs  level_state.rs  lib.rs
