[package]
name = "insert-pet-hero-tower-offense-game-here"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-gnu]
linker = "clang"

[dependencies]
bevy = { version = "0.18", features = ["mouse"] }
state = { path = "../state" }
level = { path = "../level" }
main_menu = { path = "../main_menu" }
level_selector = { path = "../level_selector" }
tracing = "0.1.44"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
